<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track That Thing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_track">Track</string>
    <string name="not_tracking">Not Tracking</string>
    <string name="yes_tracking">Tracking</string>
    <string name="secret_code_save">Save</string>
    <string name="secret_get_secret">Get Tracking Code</string>
    <string name="hint_secret_code">tracking code...</string>
    <string name="action_secret">Edit tracking code</string>
    <string name="with_code">with code:</string>
    <string name="last_update">last update:</string>
    <string name="share">Share</string>
    <string name="location_service_started">Track That Thing</string>
    <string name="touch_to_stop">Tracking</string>
    <string name="title_activity_track_someone">Track someone else</string>
    <string name="action_track_someone">Track someone else</string>
    <string name="map_controls_apply">Apply</string>
    <string name="secret_code">Enter new tracking code</string>
    <string name="loading">Loading...</string>
    <string name="invalid_secret">Invalid tracking code provided!</string>
    <string name="tracking">"Tracking: "</string>
    <string name="location_update">Location update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_saved_tracking_codes">No saved tracking codes</string>
    <string name="last_used">"Last used: "</string>
    <string name="friend_approaching">Friend approaching</string>
    <string name="your_friend_is_approaching"><![CDATA[Your friend is < 1/2 mile away!]]></string>

</resources>
