<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_save_secret"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:hint="@string/hint_secret_code"
        android:gravity="center"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_code_save"
        android:id="@+id/btn_save_secret"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_get_secret"
        android:id="@+id/btn_get_secret"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
